hard-gists/4558903/run.log
=== Docker Run Log for 4558903 ===
Started at: Mi 29. Okt 14:43:56 CET 2025

[2025-10-29 14:43:56] START: Running container for 4558903
[2025-10-29 14:43:57] SUCCESS: Container 3c01242eabbf96f4fab74d464990a249db7d9060084fd60ebb645be66148c5e9 started for 4558903
=== Container logs for 4558903 ===
  File "/snippet.py", line 70
    if Position <> RE1.Position:                                # has the position changed?
                ^^
SyntaxError: invalid syntax
=== End of logs for 4558903 ===
[2025-10-29 14:43:59] INFO: Container 3c01242eabbf96f4fab74d464990a249db7d9060084fd60ebb645be66148c5e9 has stopped
